samples/_failures_safe/1761469469_6dd8ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_386a843b.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
